--- a/Project/MarkdownTranslator/MarkdownTranslatorConsole/MarkdownTranslatorConsole.csproj
+++ b/Project/MarkdownTranslator/MarkdownTranslatorConsole/MarkdownTranslatorConsole.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.Words" Version="22.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MarkdownTranslatorCore\MarkdownTranslatorCore.csproj" />
   </ItemGroup>
 
