--- a/Project/MarkdownTranslator/MarkdownTranslatorCore/MarkdownTranslatorCore.csproj
+++ b/Project/MarkdownTranslator/MarkdownTranslatorCore/MarkdownTranslatorCore.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GoogleTranslateFreeApi" Version="1.1.1" />
     <PackageReference Include="Markdig" Version="0.30.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
